footer class correction and padding change on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -187,7 +187,7 @@ footer {
 
 @media (min-width: 961px) {
   .footer-details {
-    padding-left: 30px;
+    padding-left: 20px;
   }
 }
 
